discussion/kv_engine/179400/179400_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53052: Update frequencies for all Buckets when unified caching

Change-Id: Ib4554e41206f2c9c6b5f45362c32a54277b54564

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-08-31 08:38:32.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-31 08:55:18.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48771/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48771/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19835/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:40:10: error: "memcached/bucket_memory_manager.h" file not found [clang-diagnostic-error]
#include "memcached/bucket_memory_manager.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19835/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
error: "memcached/bucket_memory_manager.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19835/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40998/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40998/ )

CMake error: CMakeLists.txt:166 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40998/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9532/ : FAILURE

Compile error at [2022-08-31T08:47:36.057Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9532/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21080/ : FAILURE

Compile error at [2022-08-31T08:49:54.608Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21080/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9631/ : FAILURE

Compile error at [2022-08-31T08:41:09.452Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@3/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
fatal error: memcached/bucket_memory_manager.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9631/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21789/ : FAILURE

Compile error at [2022-08-31T08:49:30.751Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
fatal error: memcached/bucket_memory_manager.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21789/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22141/ : FAILURE

Compile error at [2022-08-31T08:50:34.032Z] ../kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: memcached/bucket_memory_manager.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22141/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22878/ : FAILURE

Compile error at [2022-08-31T08:51:30.914Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22878/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30170/ : FAILURE

Compile error at [2022-08-31T08:53:15.789Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30170/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19058/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
